# rekollect

./: .env.example  .gitignore  Makefile  Procfile  README.md  api.py  backfill_sessions.py  docker-compose.yml  jarvis_memory.py  pyproject.toml  rekollect-postman-collection.json  test_ingest.py  test_phase0.py
app/: auth.py  config.py  db.py  main.py  mcp_tools.py
app/graph/: dedup.py  engine.py  extraction.py  providers.py
app/models/: schemas.py
app/processing/: chunker.py
app/routers/: add.py  collections.py  debug.py  keys.py  memories.py  process.py  recall.py  remember.py
app/services/: memory.py
app/storage/: postgres.py  vector.py
docs/: memory-consolidation-enhancements.md
graphiti_core/embedder/: __init__.py  ollama.py
mcp_server/config/: config.yaml
mcp_server/src/: graphiti_mcp_server.py
mcp_server/src/config/: schema.py
mcp_server/src/services/: factories.py
migrations/: init.sql
rekollect/: __init__.py  api.py  embedders.py  importance.py  ingestion.py  memory.py
scripts/: backfill.py
tests/: conftest.py  test_e2e.py  test_quality.py
