[project]
name = "rekollect"
version = "0.1.0"
description = "Graph-based agent memory with hybrid search, temporal facts, and importance scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Elton Faggétt" },
]

dependencies = [
    "graphiti-core[neo4j]>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Homepage = "https://github.com/rekollect/rekollect"
Repository = "https://github.com/rekollect/rekollect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rekollect"]
